--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: 'Clicker Script', 'Happy Monkey', cursive;
-    background: linear-gradient(#ea32d9, #EFB0C9);
+    background: linear-gradient(#2fd0d5, #EFB0C9);
     color: black;
 }
 
